// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMethodResult schema test invalid values: 0 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'InputArgumentResults'
    Path:     CallMethodResult.schema.json#/required
  must have required property 'OutputArguments'
    Path:     CallMethodResult.schema.json#/required
"
`;

exports[`CallMethodResult schema test invalid values: 1 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'StatusCode'
    Path:     CallMethodResult.schema.json#/required
"
`;

exports[`CallMethodResult schema test invalid values: 2 1`] = `
"expect(received).toMatchSchema(schema)

received
  /StatusCode must be integer
    Received: <string> a
    Path:     CallMethodResult.schema.jsondataTypes/uint32.schema.json/type
"
`;

exports[`CallMethodResult schema test invalid values: 3 1`] = `
"expect(received).toMatchSchema(schema)

received
  /StatusCode must be >= 0
    Received: <number> -1
    Path:     CallMethodResult.schema.jsondataTypes/uint32.schema.json/minimum
"
`;

exports[`CallMethodResult schema test invalid values: 4 1`] = `
"expect(received).toMatchSchema(schema)

received
  /StatusCode must be <= 4294967295
    Received: <number> 4294967296
    Path:     CallMethodResult.schema.jsondataTypes/uint32.schema.json/maximum
"
`;
